<resources>
    <string name="app_name">SampleTwo</string>
    <string name="splash_text_gray_one">공무원의 든든한 행복파트너\n신뢰받는 연금복지전문기관</string>
    <string name="splash_bottom_text">© 2022. 공무원연금공단. All rights reserved.</string>
    <string name="certification_company">공무원연금공단</string>
    <string name="access_authorization_text">접근권한 안내</string>
    <string name="camera_text">카메라 (필수)</string>
    <string name="camera_content">신원인증용 QR코드 스캔 및 신분증 사진 촬영</string>
    <string name="album_text">앨범 (필수)</string>
    <string name="album_content">신분증 사진 저장</string>
    <string name="call_text">전화 (선택)</string>
    <string name="call_content">콜센터 연결</string>
    <string name="notification_text">알림 (선택)</string>
    <string name="notification_content">푸시 알림</string>
    <string name="warning_text">필수 권한을 허용하지 않는 경우 앱이 정상적으로 작동하지 않을 수 있습니다. 선택 권한을 허용하지 않아도 해당 기능 외 서비스는 정상적으로 사용 가능합니다.</string>
    <string name="confirm_btn_text">확인</string>
    <string name="info_one_text">쉽고 빠른 연금증 발급</string>
    <string name="info_two_text">간편한 신원인증</string>
    <string name="info_three_text">내 정보를 더 안전하게</string>
    <string name="info_one_content">본인인증과 신분증 촬영만으로\n공무원연금증을 발급 받으실 수 있습니다.</string>
    <string name="info_two_content">공무원연금공단 홈페이지 로그인,\n제휴시설 방문시 공무원연금증 앱을 이용하여\n신원인증을 할 수 있습니다.</string>
    <string name="info_three_content">분산신원증명(DID) 기술이 적용되어 개인정보를\n스스로 관리할 수 있고, 블록체인 기술을 통해\n공무원연금증의 위변조 위험을 방지합니다.</string>
    <string name="next">다음</string>
    <string name="skip">건너뛰기</string>
    <string name="agree_text">모바일 공무원연금증\n서비스 약관에 동의해 주세요.</string>
    <string name="agree_content">원활한 서비스 제공을 위해 이용 약관 동의\n내용에 동의해주세요.</string>
    <string name="agree_all">약관 전체동의</string>
    <string name="agree_service">[필수] 서비스 이용약관 동의</string>
    <string name="agree_individual">[필수] 개인정보처리방침</string>
    <string name="agree_individual_two">[필수] 개인정보 수집 및 이용동의</string>
    <string name="agree_notification">[선택] 앱 푸시 알림 수신 동의</string>
    <string name="agree_notification_text">서비스 이용에 필요한 안내사항을 푸시 알림으로 전달합니다.</string>
    <string name="certificate_card_one">공무원연금증</string>
    <string name="receiver">연금수급자</string>
    <string name="bar">|</string>
    <string name="certificate_card_two">본인인증\n증명서</string>
    <string name="certificate_content">본인인증 증명서가\n함께 발급됩니다.</string>
    <string name="get_issued">발급받기</string>
    <string name="bottom_certificate">증명서</string>
    <string name="bottom_qr_login">QR로그인</string>
    <string name="bottom_show_more">더보기</string>
    <string name="dialog_certificate_text">공무원연금증 발급이후\n이용하실 수 있습니다.</string>
    <string name="get_certificate">연금증 발급하기</string>
    <string name="get_certificate_content">증명서를 발급하기 위해 본인인증이 필요합니다.</string>
    <string name="did">DID</string>
    <string name="did_content">did:infra:01:123_A1_12qwertyuiopasdfghjklzxcvbnmas</string>
    <string name="my_info">내 정보 보기</string>
    <string name="reset_card_image">연금증 사진 설정</string>
    <string name="recapture_identity_card">(신분증 재촬영)</string>
    <string name="certificate_list">인증이력</string>
    <string name="password">비밀번호</string>
    <string name="set_password">비밀번호 설정</string>
    <string name="activate_biometric">생체인증 활성화</string>
    <string name="set_notification">알림 설정</string>
    <string name="activate_push_notification">푸시 알림 수신 활성화</string>
    <string name="app_info">앱 정보</string>
    <string name="information_use">이용안내</string>
    <string name="notice">공지사항</string>
    <string name="new_text">NEW</string>
    <string name="faq">자주묻는질문(FAQ)</string>
    <string name="paging">페이징</string>
    <string name="information_terms">이용약관</string>
    <string name="map">지도</string>
    <string name="scheme">SCHEME</string>
    <string name="app_version">앱버전</string>
    <string name="app_version_number">1.0.0</string>
    <string name="re_set_app">앱 재설정</string>
    <string name="certification_get_issue_info">공무원연금증 발급 안내</string>
    <string name="verify_info">본인인증 안내</string>
    <string name="possible_verify_mobile">본인명의 기기로 인증 가능</string>
    <string name="possible_verify_mobile_content">안전한 서비스 이용을 위해 본인인증이 필요합니다.</string>
    <string name="possible_verify_only_one">한 사람당 한 기기만 허용</string>
    <string name="possible_verify_only_one_content">새로운 기기에서 본인인증 시 기존 기기에 설치된 내용은 초기화 됩니다.</string>
    <string name="get_issue_certificate">공무원연금증 발급</string>
    <string name="way_to_verify">본인인증 수단</string>
    <string name="verify_with_mobile">휴대폰 본인 인증</string>
    <string name="verify_with_mobile_content">휴대폰 본인확인</string>
    <string name="verify_with_certification">모바일 공무원증 인증</string>
    <string name="verify_with_certification_content">행정안전부 (재직자만 사용이 가능합니다)</string>
    <string name="question_go_progress">이전에 발급받은 이력이 있습니다. 계속 진행할까요?</string>
    <string name="question_go_progress_content">이미 다른 기기에 등록되어 있는 경우\n이전 기기의 앱은 사용할 수 없습니다.</string>
    <string name="cancel">취소</string>
    <string name="progress">진행하기</string>
    <string name="complete_verify">본인인증 완료</string>
    <string name="complete_verify_content">인증이 완료되었습니다.</string>
    <string name="info_camera_id_card">신분증 촬영 안내</string>
    <string name="info_camera_id_card_content">공무원연금증의 사진 설정을 위해\n신분증을 촬영합니다.\n주민등록증 또는 운전면허증을 준비해주세요.</string>
    <string name="caution">* 유의사항</string>
    <string name="caution_content">· 빛이 반사되지 않고 정보가 잘 보이게 해주세요.\n· 어두운 바닥에 신분증의 앞면이 잘 보이도록 놓고\n가이드 영역에 맞게 촬영해 주세요.\n· 신분증 훼손이 심한 경우 인식이 어려울 수 있습니다.\n· 꼭, 본인의 신분증으로만 촬영해주세요.\n\n※ 신분증 촬영으로 수집된 정보 중 사진 정보만 사용됩니다.</string>
    <string name="go_camera_id_card">신분증 촬영</string>
    <string name="agree_push">앱 푸시 알림 수신 동의</string>
    <string name="agree_push_content">“공무원 연금증” 앱에서\n서비스 이용에 필요한 안내사항을\n푸시 알림으로 전송합니다.\n\n앱 푸시 수신에 동의하시겠습니까?</string>
    <string name="agree">동의</string>
    <string name="not_agree">미동의</string>
    <string name="sign_up_name">이름을 입력해주세요.</string>
    <string name="sign_up_certification_number">연금증서번호를 입력해주세요.</string>
    <string name="sign_up_birth">생년월일 8자리를 입력해주세요.</string>
    <string name="sign_up_recent_company">최종 근무처를 입력해주세요.</string>
    <string name="employee">재직자</string>
    <string name="verify_certification">본인인증\n증명서</string>
    <string name="certificate_slash">공무원 연금증 / </string>
    <string name="certificate_number">연금증서번호</string>
    <string name="birth">생년월일</string>
    <string name="start_certificate_date">연금개시연월</string>
    <string name="recent_company">최종근무처</string>
    <string name="employee_number">고객번호</string>
    <string name="verify">본인인증</string>
    <string name="permission_title">권한을 거부하셨습니다.</string>
    <string name="permission_content">앱 설정에서 권한 변경이 가능합니다.</string>
    <string name="dialog_cancel">닫기</string>
    <string name="go_setting">설정으로 가기</string>
    <string name="balloon_text">카드를 터치하여 QR인증을 하실 수 있습니다.</string>
    <string name="password_info">모바일 공무원연금증에서 사용할\n간편 비밀번호 6자리를 입력해 주세요.</string>
    <string name="password_confirm">확인을 위해 간편 비밀번호\n6자리를 한번 더 입력해 주세요</string>
    <string name="not_correct_password">앱 비밀번호가 일치하지 않습니다.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="question_use_biometric">생체인증을\n사용하시겠어요?</string>
    <string name="use_biometric_content">생체인증 등록후\n간편하게 로그인하세요!</string>
    <string name="do_later">나중에 하기</string>
    <string name="use">사용하기</string>
    <string name="complete_setting">설정이 완료되었습니다.</string>
    <string name="complete_setting_content">앱 설정은 더보기 화면에서\n언제든지 변경할 수 있습니다.</string>
    <string name="verify_dialog_content">인증을 취소하시겠습니까?</string>
    <string name="retry">다시 시도</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>