<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/access_authority_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ico_access_authority_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/access_authorization_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/access_authorization_text"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_authority_image" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#D6D6D6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_authorization_text" />

    <ImageView
        android:id="@+id/camera_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/camera_text"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/camera_image"
        app:layout_constraintStart_toEndOf="@+id/camera_image"
        app:layout_constraintTop_toTopOf="@+id/camera_image" />

    <TextView
        android:id="@+id/camera_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:text="@string/camera_content"
        android:textColor="@color/gray"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/camera_text"
        app:layout_constraintTop_toBottomOf="@+id/camera_text" />

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_content" />

    <TextView
        android:id="@+id/album_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/album_text"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/album_image"
        app:layout_constraintStart_toEndOf="@+id/album_image"
        app:layout_constraintTop_toTopOf="@+id/album_image" />

    <TextView
        android:id="@+id/album_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/album_content"
        android:textColor="@color/gray"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/album_text"
        app:layout_constraintTop_toBottomOf="@+id/album_text" />

    <ImageView
        android:id="@+id/call_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_content" />

    <TextView
        android:id="@+id/call_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/call_text"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/call_image"
        app:layout_constraintStart_toEndOf="@+id/call_image"
        app:layout_constraintTop_toTopOf="@+id/call_image" />

    <TextView
        android:id="@+id/call_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/call_content"
        android:textColor="@color/gray"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/call_text"
        app:layout_constraintTop_toBottomOf="@+id/call_text" />

    <ImageView
        android:id="@+id/notification_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_content" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/notification_text"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/notification_image"
        app:layout_constraintStart_toEndOf="@+id/notification_image"
        app:layout_constraintTop_toTopOf="@+id/notification_image" />

    <TextView
        android:id="@+id/notification_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/notification_content"
        android:textColor="@color/gray"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/notification_text"
        app:layout_constraintTop_toBottomOf="@+id/notification_text" />

    <ImageView
        android:id="@+id/warning_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="33dp"
        android:src="@drawable/ico_exclamation_mark_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_content" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/warning_text"
        android:textColor="@color/gray"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/warning_image"
        app:layout_constraintTop_toTopOf="@+id/warning_image" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/confirm_button_background"
        android:text="@string/confirm_btn_text"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>