<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_access_authority"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/ico_access_authority_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_access_authorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/access_authorization_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_access_authority" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#D6D6D6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_access_authorization" />

    <ImageView
        android:id="@+id/img_camera"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/text_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/camera_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_camera"
        app:layout_constraintStart_toEndOf="@+id/img_camera"
        app:layout_constraintTop_toTopOf="@+id/img_camera" />

    <TextView
        android:id="@+id/text_camera_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:text="@string/camera_content"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_camera"
        app:layout_constraintTop_toBottomOf="@+id/text_camera" />

    <ImageView
        android:id="@+id/img_album"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_camera_content" />

    <TextView
        android:id="@+id/text_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/album_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_album"
        app:layout_constraintStart_toEndOf="@+id/img_album"
        app:layout_constraintTop_toTopOf="@+id/img_album" />

    <TextView
        android:id="@+id/text_album_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/album_content"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/text_album"
        app:layout_constraintTop_toBottomOf="@+id/text_album" />

    <ImageView
        android:id="@+id/img_call"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_album_content" />

    <TextView
        android:id="@+id/text_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/call_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_call"
        app:layout_constraintStart_toEndOf="@+id/img_call"
        app:layout_constraintTop_toTopOf="@+id/img_call" />

    <TextView
        android:id="@+id/text_call_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/call_content"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/text_call"
        app:layout_constraintTop_toBottomOf="@+id/text_call" />

    <ImageView
        android:id="@+id/img_notification"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ico_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_call_content" />

    <TextView
        android:id="@+id/text_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/notification_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_notification"
        app:layout_constraintStart_toEndOf="@+id/img_notification"
        app:layout_constraintTop_toTopOf="@+id/img_notification" />

    <TextView
        android:id="@+id/text_notification_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/notification_content"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/text_notification"
        app:layout_constraintTop_toBottomOf="@+id/text_notification" />

    <ImageView
        android:id="@+id/img_warning"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="33dp"
        android:src="@drawable/ico_exclamation_mark_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_notification_content" />

    <TextView
        android:id="@+id/text_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/warning_text"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_warning"
        app:layout_constraintTop_toTopOf="@+id/img_warning" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/confirm_button_background"
        android:text="@string/confirm_btn_text"
        android:textColor="@color/white"
        android:outlineProvider="none"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>