<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingTop="64dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        tools:context=".fragments.BioVerifyFragment">

        <TextView
            android:id="@+id/text_biometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_use_biometric"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_biometric_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/use_biometric_content"
            android:textColor="@color/medium_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_biometric" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_fingerprint"
            android:layout_width="210dp"
            android:layout_height="74dp"
            android:layout_marginTop="153dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_biometric_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/fingerprint" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/next_skip_btn_background"
            android:outlineProvider="none"
            android:text="@string/do_later"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_use"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_use"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/confirm_button_background"
            android:outlineProvider="none"
            android:text="@string/use"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_skip" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>