<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.sampletwo.viewmodels.DataStoreViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SignUpFragment">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_cancel_background"
            android:hint="@string/sign_up_name"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={vm.signUpName}"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_certification_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_cancel_background"
            android:hint="@string/sign_up_certification_number"
            android:inputType="number"
            android:padding="10dp"
            android:text="@={vm.signUpCertificationNumber}"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_cancel_background"
            android:hint="@string/sign_up_birth"
            android:inputType="number"
            android:maxLength="8"
            android:padding="10dp"
            android:text="@={vm.signUpBirth}"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_certification_number" />

        <EditText
            android:id="@+id/edit_recent_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/btn_cancel_background"
            android:hint="@string/sign_up_recent_company"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={vm.signUpRecentCompany}"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_birth" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/confirm_button_background"
            android:outlineProvider="none"
            android:text="@string/confirm_btn_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
